fix some margin issues on small screens

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -10,6 +10,7 @@ body {
     color: var(--text-color);
     background-color: var(--bg-color);
     padding-left: 0;
+    margin: auto;
 }
 
 h1, h2, h3, h4, h5 {
